cluster/ci/config/prow/gke/horologium.yaml
apiVersion: v1
items:
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    name: horologium
    labels:
      app: horologium
  spec:
    replicas: 1
    serviceAccountName: horologium
    template:
      metadata:
        labels:
          app: horologium
      spec:
        containers:
        - name: horologium
          image: registry.svc.ci.openshift.org/prow-images/horologium:latest
          volumeMounts:
          - name: config
            mountPath: /etc/config
            readOnly: true
        volumes:
        - name: config
          configMap:
            name: config
- apiVersion: v1
  kind: ServiceAccount
  metadata:
    name: horologium
kind: List
