cluster/ci/config/prow/gke/jenkins-operator.yaml
apiVersion: v1
kind: List
items:
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    name: jenkins-operator
  spec:
    # Do not scale up.
    replicas: 1
    template:
      metadata:
        labels:
          app: k8sci
          component: jenkins-operator
      spec:
        serviceAccountName: jenkins-operator
        containers:
        - name: jenkins-operator
          image: registry.svc.ci.openshift.org/prow-images/jenkins-operator:latest
          args:
          - --jenkins-url=$(JENKINS_ADDRESS)
          - --jenkins-user=$(JENKINS_USER)
          - --dry-run=false
          volumeMounts:
          - mountPath: /etc/jenkins
            name: jenkins
            readOnly: true
          - name: oauth
            mountPath: /etc/github
            readOnly: true
          - name: config
            mountPath: /etc/config
            readOnly: true
        volumes:
        - name: jenkins
          secret:
            defaultMode: 420
            secretName: jenkins-token
        - name: oauth
          secret:
            secretName: oauth-token
        - name: config
          configMap:
            name: config
- apiVersion: v1
  kind: ServiceAccount
  metadata:
    name: jenkins-operator
