cluster/ci/config/prow/gke/plank.yaml
apiVersion: v1
items:
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    name: plank
  spec:
    # Do not scale up.
    replicas: 1
    template:
      metadata:
        labels:
          app: plank
      spec:
        serviceAccountName: plank
        containers:
        - name: plank
          image: registry.svc.ci.openshift.org/prow-images/plank:latest
          args:
          - --dry-run=false
          volumeMounts:
          - name: oauth
            mountPath: /etc/github
            readOnly: true
          - name: config
            mountPath: /etc/config
            readOnly: true
        volumes:
        - name: oauth
          secret:
            secretName: oauth-token
        - name: config
          configMap:
            name: config
- apiVersion: v1
  kind: ServiceAccount
  metadata:
    name: plank
kind: List
