cluster/ci/config/prow/gke/sinker.yaml
apiVersion: v1
items:
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    name: sinker
  spec:
    replicas: 1
    template:
      metadata:
        labels:
          app: sinker
      spec:
        serviceAccountName: sinker
        containers:
        - name: sinker
          image: registry.svc.ci.openshift.org/prow-images/sinker:latest
          volumeMounts:
          - name: config
            mountPath: /etc/config
            readOnly: true
        volumes:
        - name: config
          configMap:
            name: config
- apiVersion: v1
  kind: ServiceAccount
  metadata:
    name: sinker
kind: List
