cluster/ci/config/prow/gke/splice.yaml
apiVersion: v1
items:
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    name: splice
  spec:
    replicas: 1
    template:
      metadata:
        labels:
          app: splice
      spec:
        containers:
        - name: splice
          image: registry.svc.ci.openshift.org/prow-images/splice:latest
          args:
          - --submit-queue-endpoint=https://origin-sq-status-ci.svc.ci.openshift.org/github-e2e-queue
          - --remote-url=https://github.com/openshift/origin
          - --org=openshift
          - --repo=origin
          volumeMounts:
          - name: config
            mountPath: /etc/config
            readOnly: true
        volumes:
        - name: config
          configMap:
            name: config
- apiVersion: v1
  kind: ServiceAccount
  metadata:
    name: splice
kind: List
