cluster/ci/config/prow/gke/deck.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    name: deck
  spec:
    selector:
      app: deck
    ports:
    - port: 80
      targetPort: 8080
    type: NodePort
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    name: deck
  spec:
    replicas: 1
    template:
      metadata:
        labels:
          app: deck
      spec:
        serviceAccountName: deck
        containers:
        - name: deck
          image: registry.svc.ci.openshift.org/prow-images/deck:latest
          args:
          - --jenkins-url=$(JENKINS_ADDRESS)
          - --jenkins-user=$(JENKINS_USER)
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
          - mountPath: /etc/jenkins
            name: jenkins
            readOnly: true
          - name: config
            mountPath: /etc/config
            readOnly: true
        volumes:
        - name: jenkins
          secret:
            defaultMode: 420
            secretName: jenkins-token
        - name: config
          configMap:
            name: config
- apiVersion: v1
  kind: ServiceAccount
  metadata:
    name: deck
kind: List
