cluster/ci/config/prow/gke/hook.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    name: hook
  spec:
    selector:
      app: hook
    ports:
    - port: 8888
    type: NodePort
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    name: hook
  spec:
    replicas: 1
    template:
      metadata:
        labels:
          app: hook
      spec:
        serviceAccountName: hook
        containers:
        - name: hook
          image: registry.svc.ci.openshift.org/prow-images/hook:latest
          args:
          - --dry-run=false
          ports:
            - name: http
              containerPort: 8888
          volumeMounts:
          - name: hmac
            mountPath: /etc/webhook
            readOnly: true
          - name: oauth
            mountPath: /etc/github
            readOnly: true
          - name: config
            mountPath: /etc/config
            readOnly: true
          - name: plugins
            mountPath: /etc/plugins
            readOnly: true
        volumes:
        - name: hmac
          secret:
            secretName: hmac-token
        - name: oauth
          secret:
            secretName: oauth-token
        - name: config
          configMap:
            name: config
        - name: plugins
          configMap:
            name: plugins
- apiVersion: v1
  kind: ServiceAccount
  metadata:
    name: hook
kind: List
