cluster/ci/config/prow/gke/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prow
  annotations:
    kubernetes.io/ingress.global-static-ip-name: prow
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: deck
          servicePort: 80
      - path: /hook
        backend:
          serviceName: hook
          servicePort: 8888
